--- a/.github/workflows/passing-data-between-steps.yml
+++ b/.github/workflows/passing-data-between-steps.yml
@@ -11,9 +11,8 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const author = context.payload.head_commit.author;
-            console.log(author);
-            core.setOutput("author", author);
+            const authorName = context.payload.head_commit.author.name;
+            core.setOutput("authorMsg", `The author of this is ${authorName}`);
 
-      - name: Print author
-        run: echo ${{ steps.step-1.outputs.author }}
+      - name: Print author message
+        run: echo ${{ steps.step-1.outputs.authorMsg }}
