--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,11 +22,10 @@ jobs:
       - name: Build Website
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: Deploy Website
+        uses: dswistowski/surge-sh-action@v1
         with:
-          target_branch: gh-pages
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_ACTION_EXAMPLES_PAT }}
+          domain: "github-action-examples.surge.sh"
+          project: "dist"
+          login: ${{ secrets.GH_ACTION_SURGE_LOGIN }}
+          token: ${{ secrets.GH_ACTION_SURGE_TOKEN }}
