--- a/.github/workflows/pull-request-preview-deployment.yml
+++ b/.github/workflows/pull-request-preview-deployment.yml
@@ -26,7 +26,7 @@ jobs:
         run: echo ::set-output name=branch::${GITHUB_REF#refs/*/}
 
       - name: Check branch name
-        run: echo ${{ steps.vars.outputs.branch }}
+        run: echo ${{ steps.get-branch.outputs.branch }}
 
       # - name: Deploy Website
       #   uses: dswistowski/surge-sh-action@v1
