--- a/.github/workflows/pull-request-preview-deployment.yml
+++ b/.github/workflows/pull-request-preview-deployment.yml
@@ -26,11 +26,12 @@ jobs:
       #   run: echo ::set-output name=branch::${GITHUB_REF#refs/*/}
 
       - name: Check branch name
-        id: get-branch
-        uses: actions/github-script@v6
-        with:
-          script: |
-            console.log(context.payload.pull_request.base)
+        run: echo ${{ github.context.payload.number }}
+        # id: get-branch
+        # uses: actions/github-script@v6
+        # with:
+        #   script: |
+        #     console.log(context.payload.number)
 
       # - name: Deploy Website
       #   uses: dswistowski/surge-sh-action@v1
