--- a/.github/workflows/pull-request-preview-deployment.yml
+++ b/.github/workflows/pull-request-preview-deployment.yml
@@ -26,7 +26,8 @@ jobs:
       #   run: echo ::set-output name=branch::${GITHUB_REF#refs/*/}
 
       - name: Check branch name
-        run: echo ${{ github.context.payload.number }}
+        # run: echo ${{ github.context.payload.number }}
+        run: echo ${{ toJson(github) }}
         # id: get-branch
         # uses: actions/github-script@v6
         # with:
