--- a/.github/workflows/pull-request-preview-deployment.yml
+++ b/.github/workflows/pull-request-preview-deployment.yml
@@ -28,3 +28,10 @@ jobs:
           project: "dist"
           login: ${{ secrets.GH_ACTION_SURGE_LOGIN }}
           token: ${{ secrets.GH_ACTION_SURGE_TOKEN }}
+
+      - name: Comment Preview URL
+        uses: mshick/add-pr-comment@v1
+        with:
+          message: "Preview URL: https://github-action-examples-pr${{ github.event.number }}.surge.sh"
+          repo-token: ${{ secrets.GH_ACTION_EXAMPLES_PAT }}
+          repo-token-user-login: "github-actions[bot]"
