--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/ --quiet",
+    "format:check": "prettier --check './src/**/*.{js,jsx,ts,tsx,css}'",
+    "format": "prettier --write './src/**/*.{js,jsx,ts,tsx,css}'"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,7 +19,12 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
