--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.33.0",
     "eslint-plugin-react": "^7.32.2",
+    "get-folder-size": "^4.0.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
