--- a/.github/workflows/compare-builds.yml
+++ b/.github/workflows/compare-builds.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            import {getSize} from './build-size.mjs'
+            const {getSize} = require('./build-size.js');
             (async () => {
               const result = await getSize();
               console.log('2--->', result);
