--- a/.github/workflows/compare-builds.yml
+++ b/.github/workflows/compare-builds.yml
@@ -64,17 +64,36 @@ jobs:
       - name: build stats file
         run: node ./scripts/build-size.js
 
-      - name: path check 2
+      - name: Upload pr stats.json
+        uses: actions/upload-artifact@v2
+        with:
+          name: pr
+          path: ./stats.json
+          retention-days: 1
+
+  report:
+    name: Generate report
+    runs-on: ubuntu-latest
+    needs: [build-base, build-pr]
+
+    steps:
+      - name: Checkout PR
+        uses: actions/checkout@v2
+
+      # - name: Download base stats
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: base
+      #     path: base
+
+      - name: Download PR stats
+        uses: actions/download-artifact@v2
+        with:
+          name: pr
+          path: pr
+
+      - name: echo results
         run: ls
 
-      - name: Get pull request build size
-        id: pr-size
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            const size = fs.readFileSync('./stats.json', 'utf-8');
-            console.log('1-', size);
-            const sizeJson = JSON.parse(size);
-            console.log('2-', sizeJson);
-            core.setOutput("size", `size`);
+      - name: echo ./pr/
+        run: ls ./pr/
