--- a/.github/workflows/compare-builds.yml
+++ b/.github/workflows/compare-builds.yml
@@ -7,41 +7,35 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  # build-base:
-  #   name: Build base
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #       with:
-  #         ref: ${{ github.base_ref }}
+  build-base:
+    name: Build base
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.base_ref }}
 
-  #     - name: Install deps (with cache)
-  #       uses: bahmutov/npm-install@v1.7.10
-  #       with:
-  #         working-directory: './'
-  #         useLockFile: false
+      - name: Install deps (with cache)
+        uses: bahmutov/npm-install@v1.7.10
+        with:
+          working-directory: './'
+          useLockFile: false
 
-  #     - name: Build
-  #       run: npm run build
-  #       env:
-  #         CI: false
+      - name: Build
+        run: npm run build
+        env:
+          CI: false
 
-  #     - name: path check
-  #       run: ls
+      - name: build stats file
+        run: node ./scripts/build-size.js
 
-  #     - name: build stats file
-  #       run: node ./scripts/build-size.js
-
-  #     - name: path check 2
-  #       run: ls
-
-  #     - name: Get base build size
-  #       id: base-size
-  #       uses: actions/github-script@v6
-  #       with:
-  #         script: |
-  #         core.setOutput("size", `size`);
+      - name: Upload pr stats.json
+        uses: actions/upload-artifact@v2
+        with:
+          name: pr
+          path: ./stats.json
+          retention-days: 1
 
   build-pr:
     name: Build PR
@@ -74,18 +68,17 @@ jobs:
   report:
     name: Generate report
     runs-on: ubuntu-latest
-    # needs: [build-base, build-pr]
-    needs: [build-pr]
+    needs: [build-base, build-pr]
 
     steps:
       - name: Checkout PR
         uses: actions/checkout@v2
 
-      # - name: Download base stats
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: base
-      #     path: base
+      - name: Download base stats
+        uses: actions/download-artifact@v2
+        with:
+          name: base
+          path: base
 
       - name: Download PR stats
         uses: actions/download-artifact@v2
@@ -102,7 +95,13 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+            const baseResultString = fs.readFileSync('./base/stats.json', 'utf-8');
             const prResultString = fs.readFileSync('./pr/stats.json', 'utf-8');
-            console.log('---1', prResultString);
-            const {size} = JSON.parse(prResultString);
-            console.log('---2', size);
+            const baseSize = JSON.parse(baseResultString).size;
+            const prSize = JSON.parse(prResultString).size;
+            const baseSizeString = baseSize.readableString;
+            const prSizeString = prSize.readableString;
+            const diffInBytes = prSize.bytes - baseSize.bytes;
+            console.log('---1', diffInBytes);
+            console.log('---2', baseSizeString);
+            console.log('---3', prSizeString);
