--- a/.github/workflows/compare-builds.yml
+++ b/.github/workflows/compare-builds.yml
@@ -95,6 +95,16 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+
+            function humanFileSize(size) {
+              var i = size == 0 ? 0 : Math.floor(Math.log(size) / Math.log(1024));
+              return (
+                (size / Math.pow(1024, i)).toFixed(2) * 1 +
+                ' ' +
+                ['B', 'kB', 'MB', 'GB', 'TB'][i]
+              );
+            }
+
             const baseResultString = fs.readFileSync('./base/stats.json', 'utf-8');
             const prResultString = fs.readFileSync('./pr/stats.json', 'utf-8');
             const baseSize = JSON.parse(baseResultString).size;
@@ -102,7 +112,21 @@ jobs:
             const baseSizeString = baseSize.readableString;
             const prSizeString = prSize.readableString;
             const diffInBytes = prSize.bytes - baseSize.bytes;
-            console.log('---1', diffInBytes);
+            const diffSizeString = humanFileSize(diffInBytes);
+            const diffPerc = (diffInBytes*100) / baseSize.bytes;
+
+            console.log('---1', diffInBytes, diffSizeString);
             console.log('---2', baseSizeString);
             console.log('---3', prSizeString);
-            console.log('---4', 'test');
+            console.log('---4', diffPerc);
+
+      # - name: Comment
+      #   uses: NejcZdovc/comment-pr@v1.1.1
+      #   with:
+      #     file: 'comment.md'
+      #   env:
+      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      #     OLD: ${{steps.get-build-size.outputs.baseSizeString}}
+      #     NEW: ${{steps.get-build-size.outputs.prSizeString}}
+      #     DIFF: ${{steps.get-build-size.outputs.diffSizeString}}
+      #     DIFF_PERCENT: ${{steps.get-build-size.outputs.percent}}
