--- a/.github/workflows/compare-builds.yml
+++ b/.github/workflows/compare-builds.yml
@@ -122,7 +122,7 @@ jobs:
         with:
           file: 'comment.md'
         env:
-          GITHUB_TOKEN: ${{secrets.GH_ACTIONS_EXP_PAT}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           OLD: ${{steps.get-build-size.outputs.baseSizeString}}
           NEW: ${{steps.get-build-size.outputs.prSizeString}}
           DIFF: ${{steps.get-build-size.outputs.diffSizeString}}
