--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "format": "prettier --write './src/**/*.{js,jsx,ts,tsx,css}'"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
