--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,8 +16,11 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install deps
-        run: npm ci
+      - name: Install deps (with cache)
+        uses: bahmutov/npm-install@v1.7.10
+        with:
+          working-directory: './'
+          useLockFile: false
 
       - name: Build Website
         run: npm run build
@@ -25,7 +28,7 @@ jobs:
       - name: Deploy Website
         uses: dswistowski/surge-sh-action@v1
         with:
-          domain: "github-action-examples.surge.sh"
-          project: "dist"
+          domain: 'github-action-examples.surge.sh'
+          project: 'dist'
           login: ${{ secrets.GH_ACTION_SURGE_LOGIN }}
           token: ${{ secrets.GH_ACTION_SURGE_TOKEN }}
