--- a/.github/workflows/pull-request-preview-deployment.yml
+++ b/.github/workflows/pull-request-preview-deployment.yml
@@ -21,8 +21,11 @@ jobs:
           message: |
             ⏳ Deploying to https://github-action-examples-pr${{ github.event.number }}.surge.sh
 
-      - name: Install deps
-        run: npm ci
+      - name: Install deps (with cache)
+        uses: bahmutov/npm-install@v1.7.10
+        with:
+          working-directory: './'
+          useLockFile: false
 
       - name: Build Website
         run: npm run build
@@ -30,8 +33,8 @@ jobs:
       - name: Deploy Website
         uses: dswistowski/surge-sh-action@v1
         with:
-          domain: "github-action-examples-pr${{ github.event.number }}.surge.sh"
-          project: "dist"
+          domain: 'github-action-examples-pr${{ github.event.number }}.surge.sh'
+          project: 'dist'
           login: ${{ secrets.GH_ACTION_SURGE_LOGIN }}
           token: ${{ secrets.GH_ACTION_SURGE_TOKEN }}
 
